Fix broken stylesheet

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -5,7 +5,7 @@ body {
   line-height: 1.5;
   background: url('https://github.com/knosis/knosis.github.io/blob/master/images/zoetrope.jpg') #FFF cover fixed;
 }
-article, footer, header, nav, section {display: block;}
+article, header, section {display: block;}
 h1, h2, h3, h4 {
   margin: 1em 0 .5em;
   line-height: 1.25;
